# DPITunnel

./: .gitmodules  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/ru/evgeniy/dpitunnel/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: root.pem  rootCA.crt  rootCA.key
app/src/main/cpp/: CMakeLists.txt  dns.cpp  dns.h  dpi-bypass.cpp  dpi-bypass.h  fileIO.cpp  fileIO.h  hostlist.cpp  sni.cpp  sni.h  sni_cert_gen.cpp  sni_cert_gen.h  socket.cpp  socket.h
app/src/main/cpp/openssl/include/openssl/: ossl_typ.h  srtp.h  ssl.h  tls1.h
app/src/main/cpp/tun2http/: tun2http.c  udp.c
app/src/main/java/ru/evgeniy/dpitunnel/: AboutActivity.java  BrowserActivity.java  LocalDNSServer.java  MainActivity.java  NativeService.java  SettingsActivity.java  SettingsFragment.java  Tun2HttpVpnService.java  TutorialActivity.kt
app/src/main/java/ru/evgeniy/dpitunnel/fragment/: RootSlide.kt  SNISlide.kt  SettingsFragment.java
app/src/main/java/ru/evgeniy/dpitunnel/receiver/: BootReceiver.java
app/src/main/java/ru/evgeniy/dpitunnel/service/: LocalDNSServer.java  NativeService.java  Tun2HttpVpnService.java
app/src/main/java/ru/evgeniy/dpitunnel/util/: IPUtil.java  Utils.java
app/src/main/res/animator/: flipping.xml
app/src/main/res/drawable/: ic_about.xml  ic_certificate.xml  ic_root.xml
app/src/main/res/layout/: about_tool_bar.xml  activity_about.xml  activity_main.xml  activity_settings.xml  browser_tool_bar.xml  fragment_slide_root.xml  fragment_slide_sni.xml  main_tool_bar.xml  settings_tool_bar.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: settings.xml
metadata/en-US/: description.txt
metadata/ru/: description.txt
